# praixis-python

./: .gitignore  LICENSE  README.md  pyproject.toml
praixis/: __init__.py  _files.py  _http.py  _transport.py  client.py  errors.py  types.py
praixis/aio/: __init__.py  _transport.py  client.py
praixis/aio/resources/: __init__.py  chat.py  rag.py
praixis/resources/: __init__.py  chat.py  rag.py
tests/: test_async_client.py  test_client.py
